--- a/staging-task-project/index.html
+++ b/staging-task-project/index.html
@@ -2,7 +2,8 @@
 <html>
 <head><title>Sample</title></head>
 <body>
-<h1>Hello from the main branch</h1>
+<h1>Hello from the STAGING branch</h1>
+<p>This is modified content visible only in staging branch.</p>
 </body>
 </html>
 
